Use McGill theme for June 10th presentation

--- a/docs/presentations/2025_JUN_10/slides.tex
+++ b/docs/presentations/2025_JUN_10/slides.tex
@@ -1,5 +1,7 @@
 \documentclass[letterpaper,10pt,aspectratio=169,dvipsnames]{beamer}
 
+\usetheme{mcgill}
+
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsthm}
