--- a/docs/presentations/2025_JUN_10/slides.tex
+++ b/docs/presentations/2025_JUN_10/slides.tex
@@ -20,8 +20,8 @@
 }
 
 \AtBeginDocument{%
-\title[McTT: Building A Correct-By-Construction Proof Checker For Martin-L\"of Type Theory]{McTT}
-\subtitle{Building A Correct-By-Construction Proof Checker For Martin-L\"of Type Theory}
+\title[\texorpdfstring{\lambda-comp}{lambdacomp}: A Primitive \texorpdfstring{\lambda-Calculus}{Lambda Calculus} Compiler Based on CBPV]{\lambda-comp}
+\subtitle{A Primitive \lambda-Calculus Compiler Based on CBPV}
 \author[Junyoung Jang]{\parbox{10em}{\centering Junyoung~Jang\\{}{\scriptsize junyoung.jang@mail.mcgill.ca}\\{}{\scriptsize McGill University}}}
 \date{}
 }
