--- a/docs/presentations/2025_JUN_10/slides.tex
+++ b/docs/presentations/2025_JUN_10/slides.tex
@@ -20,8 +20,8 @@
 }
 
 \AtBeginDocument{%
-\title[\texorpdfstring{\lambda-comp}{lambdacomp}: A Primitive \texorpdfstring{\lambda-Calculus}{Lambda Calculus} Compiler Based on CBPV]{\lambda-comp}
-\subtitle{A Primitive \lambda-Calculus Compiler Based on CBPV}
+\title[\texorpdfstring{\(\lambda\)-comp}{lambdacomp}: A Primitive \texorpdfstring{\(\lambda\)-Calculus}{Lambda Calculus} Compiler Based on CBPV]{\lambda-comp}
+\subtitle{A Primitive \(\lambda\)-Calculus Compiler Based on CBPV}
 \author[Junyoung Jang]{\parbox{10em}{\centering Junyoung~Jang\\{}{\scriptsize junyoung.jang@mail.mcgill.ca}\\{}{\scriptsize McGill University}}}
 \date{}
 }
@@ -29,5 +29,17 @@
 \begin{document}
 \begin{frame}[plain]
   \titlepage
+\end{frame}
+
+\begin{frame}{Usual \(\lambda\)-Calculus Compile}
+\end{frame}
+
+\begin{frame}{Where has the closure gone?}
+\end{frame}
+
+\begin{frame}{Arity Analysis for CBPV}
+\end{frame}
+
+\begin{frame}{\(\eta\)-Reducing Optimization}
 \end{frame}
 \end{document}
