--- a/docs/presentations/2025_JUN_10/slides.tex
+++ b/docs/presentations/2025_JUN_10/slides.tex
@@ -20,7 +20,7 @@
 }
 
 \AtBeginDocument{%
-\title[\texorpdfstring{\(\lambda\)-comp}{lambdacomp}: A Primitive \texorpdfstring{\(\lambda\)-Calculus}{Lambda Calculus} Compiler Based on CBPV]{\lambda-comp}
+\title[\texorpdfstring{\(\lambda\)-comp}{lambdacomp}: A Primitive \texorpdfstring{\(\lambda\)-Calculus}{Lambda Calculus} Compiler Based on CBPV]{\(\lambda\)-comp}
 \subtitle{A Primitive \(\lambda\)-Calculus Compiler Based on CBPV}
 \author[Junyoung Jang]{\parbox{10em}{\centering Junyoung~Jang\\{}{\scriptsize junyoung.jang@mail.mcgill.ca}\\{}{\scriptsize McGill University}}}
 \date{}
