Add more slides for June 10th

--- a/docs/presentations/2025_JUN_10/slides.tex
+++ b/docs/presentations/2025_JUN_10/slides.tex
@@ -31,15 +31,27 @@
   \titlepage
 \end{frame}
 
+\begin{frame}{CBPV}
+\end{frame}
+
 \begin{frame}{Usual \(\lambda\)-Calculus Compile}
 \end{frame}
 
+\begin{frame}{\(\lambda\)-Abstraction as Computation}
+\end{frame}
+
 \begin{frame}{Where has the closure gone?}
+\end{frame}
+
+\begin{frame}{Full \(\lambda\)-Lifting}
 \end{frame}
 
 \begin{frame}{Arity Analysis for CBPV}
 \end{frame}
 
 \begin{frame}{\(\eta\)-Reducing Optimization}
+\end{frame}
+
+\begin{frame}{Effect-sensitive Optimizations}
 \end{frame}
 \end{document}
